name:                humblr
version:             0.3.1.0
synopsis:            Haskell wrapper for the Tumblr API
homepage:            https://github.com/danwdart/humblr
license:             BSD3
license-file:        LICENSE
author:              Nathan "Taneb" van Doorn, Dan Dart
maintainer:          cabal@dandart.co.uk
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Wno-missing-local-signatures
    -Werror
    -haddock
    -threaded
    -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe
  exposed-modules:     Web.Tumblr
                     , Web.Tumblr.Types
  build-depends:       base >=4.13
                     , mtl >=2.0
                     , aeson
                     , aeson-casing
                     , attoparsec
                     , attoparsec-conduit >= 1.0.0
                     , authenticate-oauth
                     , bytestring >=0.9
                     , conduit >= 1.0.5
                     , conduit-extra
                     , http-conduit >=1.9
                     , http-types >= 0.7
                     , monad-control 
                     , old-locale >= 1.0
                     , open-browser
                     , process
                     , time >= 1.4
                     , transformers
                     , unordered-containers >= 0.2
  hs-source-dirs:      src

test-suite humblr-test
  hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-prepositive-qualified-module
    -Wno-missing-local-signatures
    -Werror
    -haddock
    -threaded
    -rtsopts -with-rtsopts=-N
  ghcjs-options:       -dedupe
  other-modules:
    Web.TumblrSpec
  build-depends:
      base >=4.13
    , hspec