name:          humblr
version:       0.3.1.0
synopsis:      Haskell wrapper for the Tumblr API
homepage:      https://github.com/danwdart/humblr
license:       BSD3
license-file:  LICENSE
author:        Nathan "Taneb" van Doorn, Dan Dart
maintainer:    cabal@dandart.co.uk
category:      Web
build-type:    Simple
cabal-version: >=1.8

library
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  if impl(ghc >=9.2)
    default-language: GHC2021
    ghc-options:
      -Weverything -Wno-unsafe -Wno-missing-import-lists
      -Wno-missing-export-lists -Wno-implicit-prelude
      -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
      -Wno-missing-local-signatures -Werror -haddock -threaded -rtsopts
      -with-rtsopts=-N

  else
    default-language: Haskell2010

    if impl(ghc >=8.10)
      ghc-options:
        -Weverything -Wno-unsafe -Wno-missing-import-lists
        -Wno-missing-export-lists -Wno-implicit-prelude
        -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures
        -Werror -haddock -threaded -rtsopts -with-rtsopts=-N

    else
      ghc-options:
        -Weverything -Wno-unsafe -Wno-missing-import-lists
        -Wno-missing-export-lists -Wno-implicit-prelude
        -Wno-missing-local-signatures -Werror -haddock -threaded -rtsopts
        -with-rtsopts=-N

  ghcjs-options:      -dedupe
  exposed-modules:
    Web.Tumblr
    Web.Tumblr.Types

  build-depends:
      aeson
    , aeson-casing
    , attoparsec
    , authenticate-oauth
    , base                  >=4.14.3.0 && <4.18
    , bytestring            >=0.9
    , conduit               >=1.0.5
    , conduit-extra
    , http-conduit          >=1.9
    , http-types            >=0.7
    , mtl                   >=2.0
    , open-browser
    , time                  >=1.4
    , unordered-containers  >=0.2

  -- , attoparsec-conduit >= 1.0.0
  -- , monad-control 
  -- , old-locale >= 1.0
  -- , process
  -- , transformers
  hs-source-dirs:     src

test-suite humblr-test
  hs-source-dirs:     src test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    UnicodeSyntax

  if impl(ghc >=9.2)
    ghc-options:
      -Weverything -Wno-unsafe -Wno-missing-import-lists
      -Wno-missing-export-lists -Wno-implicit-prelude
      -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
      -Wno-missing-local-signatures -Werror -haddock -threaded -rtsopts
      -with-rtsopts=-N

  else
    if impl(ghc >=8.10)
      ghc-options:
        -Weverything -Wno-unsafe -Wno-missing-import-lists
        -Wno-missing-export-lists -Wno-implicit-prelude
        -Wno-missing-safe-haskell-mode -Wno-missing-local-signatures
        -Werror -haddock -threaded -rtsopts -with-rtsopts=-N

    else
      ghc-options:
        -Weverything -Wno-unsafe -Wno-missing-import-lists
        -Wno-missing-export-lists -Wno-implicit-prelude
        -Wno-missing-local-signatures -Werror -haddock -threaded -rtsopts
        -with-rtsopts=-N

  ghcjs-options:      -dedupe
  other-modules:      Web.TumblrSpec
  build-depends:
      base   >=4.14.3.0 && <4.18
    , hspec
